# helios-livestreaming

./: .gitignore  .gitmodules  Makefile  README.md  README_old.md  pyproject.toml  tracking-beacon-firmware.code-workspace
src/: .gitignore  lag_brainstorming.md  main.py  telemetary_update.py
src/overlays/: __init__.py  base.py  gauge.py  status.py  telemetry_source.py
streaming/: TelemetryPacket_pb2.py  main.py  pyproject.toml  serial_decoder.py
streaming/captures/: capture_20260218_191644.txt  capture_20260301_154435.txt  capture_20260301_155429.txt  capture_20260301_155501.txt  capture_20260301_155654.txt
streaming/overlays/: gauge.py  static_image.py  telemetry.py  telemetry_source.py
tracking-beacon-firmware/: .gitignore
